<resources>
    <string name="app_name">PlanMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="web_client_id">482461582860-4jdrrhjr5o2bvltiibbk7ku016csd3fl.apps.googleusercontent.com</string>
    <string name="txt_nav_bottom_task">Tareas</string>
    <string name="txt_nav_bottom_calendar">Calendario</string>
    <string name="txt_nav_bottom_me">Yo</string>
    <string name="fb_description">Nuevo Grupo</string>
    <string name="fb_add">Agregar Tarea</string>
    <string name="title_page_me">Perfil</string>
    <string name="content_description_img">Imagen del grupo</string>
    <string name="title_page_chat">Chat</string>
    <string name="btn_back" translatable="false">Back</string>
    <string name="btn_cerrarSecion" translatable="false">Cerrar sesión</string>

    <string name="title_page_login">Login</string>
    <string name="edit_text_placeholder">Mensaje</string>
    <string name="txt_btn_googleEE">Iniciar con google</string>

    <string name="txt_calendar_day_legend">LUN</string>
    <string name="txt_calendar_event_item">THU\nJUN 30\n14:00</string>
    <string name="txt_topic_event_item">TOPIC</string>
    <string name="txt_task_event_item">TASK</string>
    <string name="txt_group_event_item">GROUP</string>
    <string name="txt_topicg_event_item">TOPIC GROUP</string>

    <string name="txt_new_Group">Nuevo Grupo</string>
    <string name="txt_group_name">Nombre</string>
    <string name="txt_group_description">Descripción</string>
    <string name="txt_save_group">Guardar</string>

    <string name="txt_info_btn1">boton1</string>
    <string name="txt_info_btn2">boton2</string>

    <string name="txt_group_create">Crear Grupo</string>
    <string name="txt_group_gcode">Crear Codigo</string>
    <string name="txt_group_scan">Crear QR</string>
    <string name="txt_group_code">Codigo</string>
    <string name="txt_group_btn1">boton1</string>

    <string name="txt_info_exit">Salir</string>
    <string name="txt_info_delete">Eliminar</string>

    <string name="txt_description_qr">Get instant notifications on your crypto transactions, market updates, and more. Ensure you never miss a beat in the fast-paced world of cryptocurrency trading.</string>
    <string name="txt_unirme">Unirme</string>
    <string name="txt_mod_group">El administrador del grupo es solo el moderador.</string>

    <string name="txt_group_time">10:45 a. m.</string>
    <string name="txt_group_activity">Videollamada</string>

    <string name="txt_profile">Imagen de Perfil</string>
    <string name="txt_use_name">Juan Perez</string>
    <string name="txt_message_hour">8:05 PM</string>
    <string name="txt_message">Hola que areas hay??</string>

    <string name="txt_scan">Scanea el codigo para unir tu cuenta.</string>
    <string name="txt_info_qr">Scanea el codigo QR</string>
    <string name="txt_Scanear">Scanear</string>
    <string name="txt_close">Cerrar</string>
    <string name="txt_code_manually">O ingresa el codigo manualmente.</string>

    <string name="txt_btn_google">Iniciar con google</string>

    <string name="title_page_new_note">Nota</string>
    <string name="date_message">Hoy %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_Invitacion">Invitación</string>
    <string name="txt_About">About</string>
    <string name="txt_Creadores">CREADORES</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_usuarios">Usuarios</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_Email">usuario1@gmail.com</string>
    <string name="txt_informacion">Informacion</string>
    <string name="txt_Version">Version 1.0</string>
    <string name="txt_derechos_reservados">Derechos Reservados</string>
    <string name="txt_creadores">Creadores</string>
    <string name="raul">Raul</string>
    <string name="raul_gmail_com">raul@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="NombreMelvin">Melvin Alexis Tespan Caceres</string>
    <string name="CorreoMelvin">tc21i04001@usonsonate.edu.sv</string>
    <string name="NombreRaul">Raúl Edgardo Alarcon Monge</string>
    <string name="CorreoRaul">am21i04001@usonsonate.edu.sv</string>
    <string name="NombreErick">Erick Otoniel Centeno Chavez</string>
    <string name="CorreoErick">cc21i04002@usonsonate.edu.sv</string>
    <string name="NombreAntony">Antony Reggie Rodríguez López</string>
    <string name="CorreoAntony">rl19i04001@usonsonate.edu.sv</string>
    <string name="NombreHilder">Hilder Enrique Alpe Bran</string>
    <string name="CorreoHilder">ab21i04002@usonsonate.edu.sv</string>
    <string name="txt_desarrolladores">DESARROLLADORES</string>

</resources>