<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.planme.ui.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.example.planme.ui.views.task.TaskFragment"
        android:label="@string/txt_nav_bottom_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.planme.ui.views.calendar.CalendarFragment"
        android:label="@string/txt_nav_bottom_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.planme.ui.views.me.MeFragment"
        android:label="@string/txt_nav_bottom_me"
        tools:layout="@layout/fragment_me" />
</navigation>