<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBackground"
    tools:context=".MainActivity">

    <!-- Título de la app -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?attr/primaryTextColor" />

    <!-- Versión -->
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Version"
        android:textSize="14sp"
        android:textColor="?attr/primaryTextColor" />

    <!-- Imagen central -->
    <ImageView
        android:id="@+id/centralImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/profile_picture"
        />

    <!-- Derechos reservados -->
    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/centralImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/txt_derechos_reservados"
        android:textSize="12sp"
        android:textColor="?attr/primaryTextColor" />

    <!-- Botón de creadores -->
    <Button
        android:id="@+id/creatorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/txt_creadores"
        android:backgroundTint="#007AFF"
        android:textColor="#FFFFFF" />

</RelativeLayout>
