<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <!-- Imagen del creador -->
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:tint="?attr/primaryTextColor"
        android:src="@drawable/ic_usuario"
        app:shapeAppearanceOverlay="@style/CircularShape" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/txt_group_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/txt_group_activity"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_time_last_message_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/txt_group_time"
        android:textSize="14sp" />

</LinearLayout>