<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_notifications_black_24dp"
            android:contentDescription="@string/txt_group_create"
            app:iconGravity="textStart"
            app:iconPadding="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_code"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_notifications_black_24dp"
            android:contentDescription="@string/txt_group_gcode"
            app:iconGravity="textStart"
            app:iconPadding="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_read_qr"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_notifications_black_24dp"
            android:contentDescription="@string/txt_group_scan"
            app:iconGravity="textStart"
            app:iconPadding="0dp"/>
    </LinearLayout>

    <include android:id="@+id/form_layout"
        layout="@layout/form_group_layout"/>

    <include android:id="@+id/qr_layout"
        layout="@layout/info_qr_layout"/>

    <LinearLayout
        android:id="@+id/add_by_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_group_code"
                android:paddingHorizontal="16dp"
                android:inputType="text"
                android:layout_marginEnd="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_code"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_dashboard_black_24dp"
            android:contentDescription="@string/txt_group_btn1"
            app:iconGravity="textStart"
            app:iconPadding="0dp"/>
    </LinearLayout>


</LinearLayout>